Add native access and extra options
Affects: https://github.com/io7m-com/montarre/issues/23