@@ -31,5 +31,6 @@ MONTARRE_MODULE_PATH=$(/usr/bin/env java -jar "${MONTARRE_HOME}/bin/launch.jar" 
 /usr/bin/env java \
   -p "${MONTARRE_MODULE_PATH}" \
   -m com.io7m.montarre.cmdline/com.io7m.montarre.cmdline.MMain \
+  --enable-native-access=com.example.native0,com.example.native1 \
   "$@"
 
